general-k8s/multitool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
        - name: multitool
          image: praqma/network-multitool:latest
          ports:
            - containerPort: 80
